--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
           <nav class="navbar navbar-expand-lg fixed-top bg-primary">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">Saitheja Komalla</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse justify-content-center navbar-collapse" id="navbarSupportedContent">
+              <div class="collapse navbar-collapse justify-content-center " id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 mb-md-0">
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
