--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
         
             </table>
         </div>
-        <p> All rights reserved 2023 &copy; MeetNTreat™ Ltd. &reg;</p>
+        <p> All rights reserved 2023 &copy; Saitheja Komalla</p>
          
     </div>
   </div>
