--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
             <table>
                 <tr>
                     <td>
-                        <p>Connect with us:&nbsp;&nbsp;&nbsp;</p>
+                        <p>Connect with Me:&nbsp;&nbsp;&nbsp;</p>
                     </td>
                     <td><a href="https://www.linkedin.com/in/saitheja-komalla-4a02991b0/" target="_blank"><img src="linkedin.png" alt="linkedin logo" width="120" height="50"/></a></td>
                     <td><a href="https://www.facebook.com/profile.php?id=100007743525444" target="_blank"><img src="facebook.png" alt="facebook loog"  width="50" height="50"/></a></td>
