--- a/index.html
+++ b/index.html
@@ -514,11 +514,11 @@
                     <td>
                         <p>Connect with Me:&nbsp;&nbsp;&nbsp;</p>
                     </td>
-                    <td><a href="https://www.linkedin.com/in/saitheja-komalla-4a02991b0/" target="_blank"><img src="linkedin.png" alt="linkedin logo" width="120" height="50"/></a></td>
-                    <td><a href="https://www.facebook.com/profile.php?id=100007743525444" target="_blank"><img src="facebook.png" alt="facebook loog"  width="50" height="50"/></a></td>
-                    <td><a href="https://www.instagram.com/_i.teja_/" target="_blank"><img src="instagram.png" alt="instagramloog" width="50" height="50"/></a></td>
-                    <td><a href="https://github.com/Saitheja20/" target="_blank"><img src="github.png" alt="github logo" width="50" height="50"/></a></td>
-                    <td><a href="https://www.google.com/search?q=saitheja+komalla&rlz=1C1CHBF_enIN1008IN1008&oq=saitheja+komalla&aqs=chrome.0.69i59l2j69i60l2j69i61j69i65l3.3432j1j7&sourceid=chrome&ie=UTF-8" target="_blank"><img src="google.png" alt="google logo" width="50" height="50"/></a></td>
+                    <td><a href="https://www.linkedin.com/in/saitheja-komalla-4a02991b0/" target="_blank"><img  class="td" src="linkedin.png" alt="linkedin logo" width="120" height="50"/></a></td>
+                    <td><a href="https://www.facebook.com/profile.php?id=100007743525444" target="_blank"><img  class="td" src="facebook.png" alt="facebook loog"  width="50" height="50"/></a></td>
+                    <td><a href="https://www.instagram.com/_i.teja_/" target="_blank"><img class="td" src="instagram.png" alt="instagramloog" width="50" height="50"/></a></td>
+                    <td><a href="https://github.com/Saitheja20/" target="_blank"><img  class="td" src="github.png" alt="github logo" width="50" height="50"/></a></td>
+                    <td><a href="https://www.google.com/search?q=saitheja+komalla&rlz=1C1CHBF_enIN1008IN1008&oq=saitheja+komalla&aqs=chrome.0.69i59l2j69i60l2j69i61j69i65l3.3432j1j7&sourceid=chrome&ie=UTF-8" target="_blank"><img  class="td" src="google.png" alt="google logo" width="50" height="50"/></a></td>
                 </tr>
         
         
